# vdf-serde-format

./: .releaserc.yaml  CHANGELOG.md  CREDITS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: rust-release.yaml  semver.yaml
src/: deserializer.rs  error.rs  lib.rs  preprocessor.rs  serializer.rs
