[package]
name = "vdf-serde-format"
version = "0.0.0"
edition = "2021"
license-file = "LICENSE"
description = "A VDF serialization/deserialization file format using serde."
repository = "https://github.com/Steam-App-Builder-CLI/vdf-serde-format"
documentation = "https://docs.rs/vdf-serde-format"
homepage = "https://docs.rs/vdf-serde-format"
readme = "README.md"
authors = ["Brandon Smith <bsmithcompsci@gmail.com>"]
keywords = ["serde", "serialization"]
categories = ["encoding"]
rust-version = "1.81.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }